SCELL problem unsolved. For sync

--- a/crystal_functions/lattice_dynamics_examples/thermodynamics-HA.ipynb
+++ b/crystal_functions/lattice_dynamics_examples/thermodynamics-HA.ipynb
@@ -228,7 +228,7 @@
    "metadata": {},
    "source": [
     "## Class Harmonic\n",
-    "Inherited from Freq_output class, because details of an HA calculation is included in a single .out file. Thermodynamic-specific attributes are added, such as summing up phonons.\n",
+    "Inherited from Crystal_output class, because details of an HA calculation is included in a single .out file. Thermodynamic-specific attributes are added, such as summing up phonons.\n",
     "\n",
     "### Methods\n",
     "**\\_\\_init\\_\\_(output_name, temperature=[298.15], write_out=True, filename='HA-thermodynamics.dat')**  \n",
@@ -283,24 +283,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "5638cb13",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (492272400.py, line 30)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [1]\u001b[0;36m\u001b[0m\n\u001b[0;31m    write_out=True, filename='HA-thermodynamics.dat'):\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "from crystal_functions.lattice_dynamics.file_readwrite import Freq_output\n",
+    "from crystal_functions.file_readwrite import Crystal_output\n",
     "\n",
     "\n",
-    "class Harmonic(Freq_output):\n",
+    "class Harmonic(Crystal_output):\n",
     "    \"\"\"\n",
-    "    Class Harmonic, inherited from the Freq_output class, with thermodynamic attributes.\n",
+    "    Class Harmonic, inherited from the Crystal_output class, with thermodynamic attributes.\n",
     "    Used for harmonic phonon calclulations (single file).\n",
     "    \n",
     "    Inherited attributes:\n",
-    "        self.lattice\n",
     "        self.edft\n",
+    "        self.nqpoint\n",
+    "        self.qpoint\n",
     "        self.nmode\n",
     "        self.frequency\n",
+    "        self.eigenvector\n",
     "    \n",
     "    New attributes:\n",
     "        self.mode, __init__, The list of mode objects.\n",
@@ -314,13 +325,16 @@
     "        self.entropy, thermodynamics\n",
     "        self.C_v, thermodynamics\n",
     "    \"\"\"\n",
-    "    def __init__(self, output_name, temperature=[298.15],\n",
+    "    def __init__(self, output_name, temperature=[298.15], scelphono=[]\n",
     "                 write_out=True, filename='HA-thermodynamics.dat'):\n",
     "        \"\"\"\n",
     "        Input:\n",
     "            output_name, str, Name of the output file.\n",
     "            Temperature, nTempt * 1 array / list, Temperatures where the thermodynamic\n",
     "                         properties are computed. Unit: K\n",
+    "            scellphono, ndimension * ndimension list, The supercell manipulation matrix\n",
+    "                        used for vibrational properties. Should be the same as 'SCELPHONO'\n",
+    "                        keyword in CRYSTAL input file.\n",
     "            write_out, bool, Wheter to print out HA thermodynamic properties.\n",
     "            filename, str, Name of the printed-out file, used only if write_out = True.\n",
     "        Output:\n",
@@ -332,12 +346,12 @@
     "        \"\"\"\n",
     "        import numpy as np\n",
     "\n",
-    "        super(Harmonic, self).__init__(output_name)\n",
+    "        super(Harmonic, self).read_cry_output(output_name)\n",
     "        self.temperature = np.array(temperature, dtype=float)\n",
     "        self.get_edft()\n",
     "        self.get_mode()\n",
     "        self.clean_imaginary()\n",
-    "        \n",
+    "\n",
     "        vol = self.lattice.volume\n",
     "        \n",
     "        # Transfer the modes in self.freqency into lists of mode objects\n",
@@ -357,6 +371,30 @@
     "            self.print_results(file=wtout)\n",
     "            wtout.close()\n",
     "\n",
+    "    def generate_lattice(self, scelphono):\n",
+    "        \"\"\"\n",
+    "        Generate the pymatgen 'structure' object for the next-step analysis.\n",
+    "        \"\"\"\n",
+    "        import numpy as np\n",
+    "        from crystal_functions.convert import cry_out2pmg\n",
+    "        from pymatgen.core.structure import make_supercell\n",
+    "        \n",
+    "        ndimen = self.get_dimensionality()\n",
+    "\n",
+    "        if not scelphono or not ndimen:\n",
+    "            self.lattice = cry_out2pmg(self, vacuum=500)\n",
+    "            return self.lattice\n",
+    "        \n",
+    "        scell_mx = np.eye(3, dtype=float)\n",
+    "        scell_mx[: ndimen, : ndimen] = np.array(scelphono)[: ndimen, : ndimen]\n",
+    "        scell_mx = np.linalg.pinv(scell_mx)\n",
+    "        \n",
+    "        self.lattice = cry_out2pmg(self, vacuum=500).make_supercell(scell_mx,\n",
+    "                                                                    to_unit_cell=False)\n",
+    "        return self.lattice\n",
+    "        \n",
+    "        \n",
+    "        \n",
     "    def phonon_sumup(self, temperature=None):\n",
     "        \"\"\"\n",
     "        Summing up inidival phonon modes at each q point. Translational modes with\n",
