--- a/tutorial/thermodynamics/file_readwrite.ipynb
+++ b/tutorial/thermodynamics/file_readwrite.ipynb
@@ -8,42 +8,7 @@
     "# Basic I/O of DFPT\n",
     "The density functional perturbation theory (DFPT) specific methods and attributes are available in 'file_readwrite.py' since version 2022.x.x.\n",
     "\n",
-    "## Class Crystal_output\n",
-    "\n",
-    "Class Crystal_output can be used to extract the harmonic frequency calculation data from the output.\n",
-    "\n",
-    "### Methods\n",
-    "**get_qpoint()**  \n",
-    "Get DFT total energy of the system and the list of q points where the vibrational frequency is calculated. Dispersion output (multiple q points) is supported. \n",
-    "\n",
-    "To avoid ambigious definition, the search for DFT total energy is integrated into this method. To consider possible empirical corrections, the total energy reported at the central point when taking the numerical secondary derivatives is used, instead of the converged value at the final step of SCF. Unit: KJ/mol cell\n",
-    "\n",
-    "**get_mode()**  \n",
-    "Get frequencies of all modes at all the q points sampled. Unit: THz.\n",
-    "\n",
-    "**get_eigenvector()**  \n",
-    "Get the eigenvectors of all normal modes. Eigenvectors are normalised to classical amplitudes. Unit: Angstrom\n",
-    "\n",
-    "**clean_imaginary()**  \n",
-    "Substitute the negative frequencies with numpy NaN values and keep the original shape of numpy arrays. Not a standalone method. Used after get_mode(). The threshold of a negative frequency is -0.0001 THz.\n",
-    "\n",
-    "### Attributes\n",
-    "\n",
-    "* **self.lattice**, \\_\\_init\\_\\_, pymatgen structure objection, for geometry information.\n",
-    "* **self.edft**, get_edft, float, DFT total energy of simulation cell. Unit: KJ / mol cell.\n",
-    "* **self.nqpoint**, get_qpoint, int, number of q point where the frequencies are calculated.  \n",
-    "* **self.qpoint**, get_qpoint, nqpoint * 3 numpy array, the fractional coordinates of q points in reciprocal lattice.  \n",
-    "* **self.nmode**, get_mode, nqpoint * 1 numpy array, the numbers of modes at each q point.  \n",
-    "* **self.frequency**, get_mode and clean_imaginary, nqpoint * nmode numpy array, the vibrational frequencies ($\\nu$) of each mode at each q point. Unit: THz.\n",
-    "\n",
-    "Note: \n",
-    "\n",
-    "Angular frequency: $\\omega = 2\\pi\\nu$  \n",
-    "Eigen value of dynamic matrix: $\\lambda = \\nu^{2}$\n",
-    "\n",
-    "* **self.eigenvector**, get_eigenvector, nqpoint * nmode * natom * 3 numpy array, the eigenvectors of dynamic matrix at each atom, each vibrational mode and each qpoint. Classical amplitude (298.15K), expressed in Cartesian coordinates. Unit: Angstrom.\n",
-    "\n",
-    "**Modifications are made at the end of Crystal_output class. Line 737~957. Source codes attached in the bottom cell.**"
+    "**Modifications are made at the end of Crystal_output class. Line 737~957. Documentations and source codes are attached at the bottom of this page.**"
    ]
   },
   {
@@ -92,7 +57,7 @@
     "from crystal_functions.file_readwrite import Crystal_output\n",
     "\n",
     "paracetamol = Crystal_output()\n",
-    "paracetamol.read_cry_output('freqf1-r0.out')\n",
+    "paracetamol.read_cry_output('data/freqf1-r0.out')\n",
     "paracetamol.get_mode()\n",
     "print('Paracetamol EDFT:', paracetamol.edft)\n",
     "print('Paracetamol qpoint:', paracetamol.nqpoint, paracetamol.qpoint)\n",
@@ -122,7 +87,7 @@
    ],
    "source": [
     "graphene = Crystal_output()\n",
-    "graphene.read_cry_output('nostr_modes.out')\n",
+    "graphene.read_cry_output('data/nostr_modes.out')\n",
     "graphene.get_mode()\n",
     "print('Graphene EDFT:', graphene.edft)\n",
     "print('Graphene qpoints:', graphene.nqpoint)\n",
@@ -297,7 +262,7 @@
    ],
    "source": [
     "neg_freq = Crystal_output()\n",
-    "neg_freq.read_cry_output('f2p2q-r1.out')\n",
+    "neg_freq.read_cry_output('data/f2p2q-r1.out')\n",
     "neg_freq.get_mode()\n",
     "neg_freq.get_eigenvector()\n",
     "neg_freq.clean_imaginary()\n",
@@ -311,12 +276,47 @@
    "id": "2fd203f8",
    "metadata": {},
    "source": [
+    "## Class Crystal_output\n",
+    "\n",
+    "Class Crystal_output can be used to extract the harmonic frequency calculation data from the output.\n",
+    "\n",
+    "### Methods\n",
+    "**get_qpoint()**  \n",
+    "Get DFT total energy of the system and the list of q points where the vibrational frequency is calculated. Dispersion output (multiple q points) is supported. \n",
+    "\n",
+    "To avoid ambigious definition, the search for DFT total energy is integrated into this method. To consider possible empirical corrections, the total energy reported at the central point when taking the numerical secondary derivatives is used, instead of the converged value at the final step of SCF. Unit: KJ/mol cell\n",
+    "\n",
+    "**get_mode()**  \n",
+    "Get frequencies of all modes at all the q points sampled. Unit: THz.\n",
+    "\n",
+    "**get_eigenvector()**  \n",
+    "Get the eigenvectors of all normal modes. Eigenvectors are normalised to classical amplitudes. Unit: Angstrom\n",
+    "\n",
+    "**clean_imaginary()**  \n",
+    "Substitute the negative frequencies with numpy NaN values and keep the original shape of numpy arrays. Not a standalone method. Used after get_mode(). The threshold of a negative frequency is -0.0001 THz.\n",
+    "\n",
+    "### Attributes\n",
+    "\n",
+    "* **self.lattice**, \\_\\_init\\_\\_, pymatgen structure objection, for geometry information.\n",
+    "* **self.edft**, get_qpoint, float, DFT total energy of simulation cell. Unit: KJ / mol cell.\n",
+    "* **self.nqpoint**, get_qpoint, int, number of q point where the frequencies are calculated.  \n",
+    "* **self.qpoint**, get_qpoint, nqpoint * 3 numpy array, the fractional coordinates of q points in reciprocal lattice.  \n",
+    "* **self.nmode**, get_mode, nqpoint * 1 numpy array, the numbers of modes at each q point.  \n",
+    "* **self.frequency**, get_mode and clean_imaginary, nqpoint * nmode numpy array, the vibrational frequencies ($\\nu$) of each mode at each q point. Unit: THz.\n",
+    "\n",
+    "Note: \n",
+    "\n",
+    "Angular frequency: $\\omega = 2\\pi\\nu$  \n",
+    "Eigen value of dynamic matrix: $\\lambda = \\nu^{2}$\n",
+    "\n",
+    "* **self.eigenvector**, get_eigenvector, nqpoint * nmode * natom * 3 numpy array, the eigenvectors of dynamic matrix at each atom, each vibrational mode and each qpoint. Classical amplitude (298.15K), expressed in Cartesian coordinates. Unit: Angstrom.\n",
+    "\n",
     "The source code (file_readwrite.py Line 737~957) is attached below:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "8514470d",
    "metadata": {},
    "outputs": [],
