corrected errors in the examples notebook for the plot.py collection

--- a/examples/plot.ipynb
+++ b/examples/plot.ipynb
@@ -20,8 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from crystal_functions.crystal_functions.file_readwrite import Properties_output\n",
-    "import crystal_functions.crystal_functions.plot as cfplt\n"
+    "from crystal_functions.file_readwrite import Properties_output\n",
+    "import crystal_functions.plot as cfplt\n"
    ]
   },
   {
@@ -44,7 +44,7 @@
    ],
    "source": [
     "Data = Properties_output().read_cry_bands(\n",
-    "    'crystal_functions/examples/data/hTaAs_lda_bande44.BAND')\n",
+    "    'data/hTaAs_lda_bande44.BAND')\n",
     "cfplt.plot_cry_bands(\n",
     "    Data, energy_range=[-5, 5], k_labels=['Gamma', 'M', 'K', 'A', 'L', 'H', 'K'], title='hTaAs')\n"
    ]
@@ -111,8 +111,8 @@
     }
    ],
    "source": [
-    "Data = ['crystal_functions/examples/data/hTaAs_lda_noso_bande.band', 'crystal_functions/examples/data/hTaAs_lda_bande44.BAND',\n",
-    "        'crystal_functions/examples/data/hTaAs_lda_P15_bande.band', 'crystal_functions/examples/data/hTaAs_lda_P25_bande.band']\n",
+    "Data = ['data/hTaAs_lda_noso_bande.band', 'data/hTaAs_lda_bande44.BAND',\n",
+    "        'data/hTaAs_lda_P15_bande.band', 'data/hTaAs_lda_P25_bande.band']\n",
     "for index, file in enumerate(Data):\n",
     "    Data[index] = Properties_output().read_cry_bands(file)\n",
     "\n",
@@ -244,7 +244,7 @@
     }
    ],
    "source": [
-    "Data=Properties_output().read_cry_doss('crystal_functions/examples/data/doss_96.DOSS')\n",
+    "Data=Properties_output().read_cry_doss('data/doss_96.DOSS')\n",
     "cfplt.plot_cry_doss(Data)"
    ]
   },
@@ -408,7 +408,7 @@
     }
    ],
    "source": [
-    "Data=Properties_output().read_cry_doss('crystal_functions/examples/data/doss_ito-cu.DOSS')\n",
+    "Data=Properties_output().read_cry_doss('data/doss_ito-cu.DOSS')\n",
     "cfplt.plot_cry_doss(Data, title='example', figsize=(16, 10), linewidth=1.5,\n",
     "                    energy_range=[-5, 5])"
    ]
@@ -525,10 +525,10 @@
    ],
    "source": [
     "band_data = Properties_output().read_cry_bands(\n",
-    "    'crystal_functions/examples/data/hTaAs_lda_bande44.BAND')\n",
+    "    'data/hTaAs_lda_bande44.BAND')\n",
     "\n",
     "doss_data = Properties_output().read_cry_doss(\n",
-    "    'crystal_functions/examples/data/doss_96.DOSS')\n",
+    "    'data/doss_96.DOSS')\n",
     "\n",
     "\n",
     "cfplt.plot_cry_es(band_data, doss_data, k_labels=[\n",
