Modified according to comments of PR28

--- a/tutorial/thermodynamics/file_readwrite.ipynb
+++ b/tutorial/thermodynamics/file_readwrite.ipynb
@@ -8,7 +8,7 @@
     "# Basic I/O of DFPT\n",
     "The density functional perturbation theory (DFPT) specific methods and attributes are available in 'file_readwrite.py' since version 2022.x.x.\n",
     "\n",
-    "**Modifications are made at the end of Crystal_output class. Line 737~957. Documentations and source codes are attached at the bottom of this page.**"
+    "**Modifications are made at the end of Crystal_output class. Line 741~991. Documentations and source codes are attached at the bottom of this page.**"
    ]
   },
   {
@@ -281,6 +281,12 @@
     "Class Crystal_output can be used to extract the harmonic frequency calculation data from the output.\n",
     "\n",
     "### Methods\n",
+    "**check_freq_file()**  \n",
+    "Check whether an output file is specified and whether it is a frequency calculation file. Not a standalone method. The identifier used: \n",
+    "```\n",
+    "+++ SYMMETRY ADAPTION OF VIBRATIONAL MODES +++\n",
+    "```\n",
+    "\n",
     "**get_qpoint()**  \n",
     "Get DFT total energy of the system and the list of q points where the vibrational frequency is calculated. Dispersion output (multiple q points) is supported. \n",
     "\n",
@@ -297,7 +303,6 @@
     "\n",
     "### Attributes\n",
     "\n",
-    "* **self.lattice**, \\_\\_init\\_\\_, pymatgen structure objection, for geometry information.\n",
     "* **self.edft**, get_qpoint, float, DFT total energy of simulation cell. Unit: KJ / mol cell.\n",
     "* **self.nqpoint**, get_qpoint, int, number of q point where the frequencies are calculated.  \n",
     "* **self.qpoint**, get_qpoint, nqpoint * 3 numpy array, the fractional coordinates of q points in reciprocal lattice.  \n",
@@ -332,14 +337,40 @@
     "                        Unit: THz\n",
     "        self.eigenvector: get_eigenvector, Eigenvectors (classical amplitude)\n",
     "                          of all atoms all modes at all qpoints. Unit: Angstrom\n",
-    "\n",
-    "    By Spica. Vir., ICL. Jun. 01, 2022.\n",
     "    \"\"\"\n",
+    "\n",
+    "    def check_freq_file(self):\n",
+    "        \"\"\"\n",
+    "        Not a standalone method. Check if the output is specified and if it is\n",
+    "        a frequency output. The identifier:\n",
+    "        +++ SYMMETRY ADAPTION OF VIBRATIONAL MODES +++\n",
+    "\n",
+    "        Input:\n",
+    "            -\n",
+    "        Output:\n",
+    "            is_freq: bool, True if the identifier is found.\n",
+    "        \"\"\"\n",
+    "        import re\n",
+    "\n",
+    "        if not hasattr(self, 'data'):\n",
+    "            return \"ERROR: Output file not specified.\"\n",
+    "\n",
+    "        is_freq = False\n",
+    "\n",
+    "        for line in self.data:\n",
+    "            if re.match(r'^\\s*\\+\\+\\+\\sSYMMETRY\\sADAPTION\\sOF\\sVIBRATIONAL\\sMODES\\s\\+\\+\\+', line):\n",
+    "                is_freq = True\n",
+    "                break\n",
+    "            else:\n",
+    "                continue\n",
+    "\n",
+    "        return is_freq\n",
     "\n",
     "    def get_qpoint(self):\n",
     "        \"\"\"\n",
     "        Get the lattice information, DFT total energy and qpoints at which the\n",
     "        phonon frequency is calculated.\n",
+    "\n",
     "        Input:\n",
     "            -\n",
     "        Output:\n",
@@ -351,6 +382,10 @@
     "        \"\"\"\n",
     "        import re\n",
     "        import numpy as np\n",
+    "\n",
+    "        is_freq = self.check_freq_file()\n",
+    "        if not is_freq:\n",
+    "            return \"ERROR: Not a frequency output.\"\n",
     "\n",
     "        self.nqpoint = 0\n",
     "        self.edft = 0\n",
@@ -526,7 +561,8 @@
     "            if freq[0] > -1e-4:\n",
     "                continue\n",
     "\n",
-    "            print('WARNING: Negative frequencies detected - Calculated thermodynamics might be inaccurate.')\n",
+    "            print(\n",
+    "                'WARNING: Negative frequencies detected - Calculated thermodynamics might be inaccurate.')\n",
     "            print('WARNING: Negative frequencies will be substituted by NaN.')\n",
     "\n",
     "            neg_rank = np.where(freq <= -1e-4)[0]\n",
