Modified according to comments of PR28

--- a/tutorial/thermodynamics/Harmonic_Approx.ipynb
+++ b/tutorial/thermodynamics/Harmonic_Approx.ipynb
@@ -741,6 +741,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from crystal_functions.file_readwrite import Crystal_output\n",
+    "\n",
     "class Harmonic(Crystal_output):\n",
     "    \"\"\"\n",
     "    Class Harmonic, inherited from the Crystal_output class, with thermodynamic\n",
