Harmonic thermodynamics, pressure added

--- a/examples/thermodynamics.ipynb
+++ b/examples/thermodynamics.ipynb
@@ -21,12 +21,13 @@
     "from crystal_functions.thermodynamics import Harmonic\n",
     "\n",
     "rm_condition = Harmonic().from_file('data/paracetamol_f1_freq.out', \n",
-    "                                    temperature=[298.15], \n",
+    "                                    temperature=[298.15],\n",
+    "                                    pressure=[0.000101], \n",
     "                                    scelphono=[[1, 0, 0],\n",
     "                                               [0, 1, 0],\n",
     "                                               [0, 0, 1]],\n",
     "                                    write_out=False)\n",
-    "E_h, E_zp, U_vib, S, C_v = rm_condition.thermodynamics()"
+    "E_h, E_g, E_zp, U_vib, S, C_v = rm_condition.thermodynamics()"
    ]
   },
   {
@@ -34,12 +35,12 @@
    "id": "fd2fbf3b",
    "metadata": {},
    "source": [
-    "Initialization and calculation. Temperature = 298.15K, pressure = 0."
+    "Initialization and calculation. Temperature = 298.15K, pressure = 0.000101 GPa (as given at the bottom of 'data/paracetamol_f1_freq.out')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "18a94ee0",
    "metadata": {},
    "outputs": [
@@ -47,25 +48,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DFT total energy (EL) =  -5402457.523570631 KJ/mol\n",
-      "Helmholtz free energy (EL+E0+ET-TS) =  -5400802.066049164  KJ/mol\n",
-      "Zero-point energy (E0) =  1759.1003801887073  KJ/mol\n",
-      "Vibrational contribution to internal energy - E0 (ET) =  107.20367473751753  KJ/mol\n",
-      "Entropy*Temperature (TS) =  210.8465334596594  KJ/mol\n",
-      "Heat capacity =  665.575318228324  J/mol*K\n",
-      "Entropy =  707.1827384191159  J/mol*K\n"
+      "DFT total energy (EL) =  -5402457.523570631 kJ/mol\n",
+      "Helmholtz free energy (EL+E0+ET-TS) =  -5611437.752975363  kJ/mol\n",
+      "Gibbs free energy (EL+E0+ET-TS+pV) =  -5611437.707096571  kJ/mol\n",
+      "Zero-point energy (E0) =  1759.1003801887073  kJ/mol\n",
+      "Vibrational contribution to internal energy - E0 (ET) =  107.20367473751753  kJ/mol\n",
+      "Entropy*Temperature (TS) =  210846.5334596592  J/mol\n",
+      "Heat capacity =  665.5753182283242  J/mol*K\n",
+      "Entropy =  707.1827384191153  J/mol*K\n"
      ]
     }
    ],
    "source": [
     "# Note: All attributes are lists.\n",
-    "print('DFT total energy (EL) = ', rm_condition.edft, 'KJ/mol')\n",
-    "print('Helmholtz free energy (EL+E0+ET-TS) = ', E_h[0, 0], ' KJ/mol')\n",
-    "print('Zero-point energy (E0) = ', E_zp[0], ' KJ/mol')\n",
-    "print('Vibrational contribution to internal energy - E0 (ET) = ', U_vib[0, 0] - E_zp[0], ' KJ/mol')\n",
-    "print('Entropy*Temperature (TS) = ', S[0, 0] * 298.15, ' KJ/mol')\n",
-    "print('Heat capacity = ', C_v[0, 0] * 1000, ' J/mol*K')\n",
-    "print('Entropy = ', S[0, 0] * 1000, ' J/mol*K')"
+    "print('DFT total energy (EL) = ', rm_condition.edft, 'kJ/mol')\n",
+    "print('Helmholtz free energy (EL+E0+ET-TS) = ', E_h[0, 0], ' kJ/mol')\n",
+    "print('Gibbs free energy (EL+E0+ET-TS+pV) = ', E_g[0, 0, 0], ' kJ/mol')\n",
+    "print('Zero-point energy (E0) = ', E_zp[0], ' kJ/mol')\n",
+    "print('Vibrational contribution to internal energy - E0 (ET) = ', U_vib[0, 0] - E_zp[0], ' kJ/mol')\n",
+    "print('Entropy*Temperature (TS) = ', S[0, 0] * 298.15, ' J/mol')\n",
+    "print('Heat capacity = ', C_v[0, 0], ' J/mol*K')\n",
+    "print('Entropy = ', S[0, 0], ' J/mol*K')"
    ]
   },
   {
@@ -75,9 +78,17 @@
    "source": [
     "Default units of output quantities:\n",
     "\n",
-    "* **KJ per mol simulation cell**: Helmholtz free energy, zero-point energy, vibrational contribution to internal energy\n",
+    "* **KJ per mol simulation cell**: Helmholtz free energy(E_h), Gibbs free energy(E_g), zero-point energy(E_zp), vibrational contribution to internal energy(U_vib)\n",
     "\n",
-    "* **KJ per mole simulation cell per K**: Constant volume heat capacity, entropy"
+    "* **J per mole simulation cell per K**: Constant volume heat capacity(C_v), entropy(S)\n",
+    "\n",
+    "Dimension of output quantities:\n",
+    "\n",
+    "By default, phonon dispersion is summed up to calculate the thermodyanmics of bulk crystals, in which case nqpoint is set to 1, and qpoint is set to \\[\\[0, 0, 0\\]\\].\n",
+    "\n",
+    "* **nqpoint\\*nTemperature\\*nPressure**: Gibbs free energy(E_g)  \n",
+    "* **nqpoint\\*nTemperature**: Helmholtz free energy(E_h), vibrational contribution to internal energy(U_vib), constant volume heat capacity(C_v), entropy(S)  \n",
+    "* **nqpoint\\*1**: zero-point energy(E_zp)"
    ]
   },
   {
@@ -90,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "d5e8d24b",
    "metadata": {},
    "outputs": [
@@ -385,7 +396,8 @@
     "import numpy as np\n",
     "\n",
     "t = np.arange(0, 301, 30)\n",
-    "r0_freq = Harmonic().from_file('data/paracetamol_f1_disp.out', temperature=t,\n",
+    "p = np.arange(0, 0.51, 0.1)\n",
+    "r0_freq = Harmonic().from_file('data/paracetamol_f1_disp.out', temperature=t, pressure=p,\n",
     "                               scelphono=[[1, 0, 0], [0, 1, 0], [0, 0, 1]],\n",
     "                               write_out=True, filename='data/paracetamol_f1_disp.dat')"
    ]
@@ -399,7 +411,7 @@
     "\n",
     "Notes:\n",
     "1. Negative frequencies (< -0.0001 THz) are replaced by NaN. Warning messages are printed. Rerunning the calculation is suggested in practice.  \n",
-    "2. The first 3 translational modes (0 THz) are removed to avoid numerical problems. \n",
+    "2. The first 3 translational modes (0 THz, which has no contribution to thermodynamics) are removed to avoid numerical problems. \n",
     "3. By setting `write_out=True`, calculations are automatically launched."
    ]
   }
