HA thermo debug and add QHA features
Modify the units of Mode.frequency, from 2pi*THz to THz
Add Mode.polynomial fit
Add Harmonic.from_data
Harmonic thermodynamic properties debug

--- a/examples/thermodynamics.ipynb
+++ b/examples/thermodynamics.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a12ee87d",
    "metadata": {},
    "outputs": [],
@@ -21,13 +21,12 @@
     "from crystal_functions.thermodynamics import Harmonic\n",
     "\n",
     "rm_condition = Harmonic().from_file('data/paracetamol_f1_freq.out', \n",
-    "                                    temperature=[298.15],\n",
-    "                                    pressure=[0.000101], \n",
     "                                    scelphono=[[1, 0, 0],\n",
     "                                               [0, 1, 0],\n",
     "                                               [0, 0, 1]],\n",
     "                                    write_out=False)\n",
-    "E_h, E_g, E_zp, U_vib, S, C_v = rm_condition.thermodynamics()"
+    "E_h, E_g, E_zp, U_vib, S, C_v = rm_condition.thermodynamics(temperature=[298.15],\n",
+    "                                                            pressure=[0.000101])"
    ]
   },
   {
@@ -40,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "18a94ee0",
    "metadata": {},
    "outputs": [
@@ -49,12 +48,12 @@
      "output_type": "stream",
      "text": [
       "DFT total energy (EL) =  -5402457.523570631 kJ/mol\n",
-      "Helmholtz free energy (EL+E0+ET-TS) =  -5611437.752975363  kJ/mol\n",
-      "Gibbs free energy (EL+E0+ET-TS+pV) =  -5611437.707096571  kJ/mol\n",
-      "Zero-point energy (E0) =  1759.1003801887073  kJ/mol\n",
-      "Vibrational contribution to internal energy - E0 (ET) =  107.20367473751753  kJ/mol\n",
+      "Helmholtz free energy (EL+E0+ET-TS) =  -5400802.066049164  kJ/mol\n",
+      "Gibbs free energy (EL+E0+ET-TS+pV) =  -5400802.020170372  kJ/mol\n",
+      "Zero-point energy (E0) =  1759.1003801887075  kJ/mol\n",
+      "Vibrational contribution to internal energy - E0 (ET) =  107.2036747375173  kJ/mol\n",
       "Entropy*Temperature (TS) =  210846.5334596592  J/mol\n",
-      "Heat capacity =  665.5753182283242  J/mol*K\n",
+      "Heat capacity =  665.5753182283241  J/mol*K\n",
       "Entropy =  707.1827384191153  J/mol*K\n"
      ]
     }
@@ -101,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "d5e8d24b",
    "metadata": {},
    "outputs": [
@@ -432,7 +431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
