--- a/tutorial/thermodynamics/file_readwrite.ipynb
+++ b/tutorial/thermodynamics/file_readwrite.ipynb
@@ -48,7 +48,7 @@
      "output_type": "stream",
      "text": [
       "Paracetamol EDFT: -5402457.523570631\n",
-      "Paracetamol qpoint: 1 [0. 0. 0.]\n",
+      "Paracetamol qpoint: 1 [[0. 0. 0.]]\n",
       "Paracetamol modes: 1 [240.]\n"
      ]
     }
@@ -59,7 +59,7 @@
     "paracetamol = Crystal_output()\n",
     "paracetamol.read_cry_output('data/freqf1-r0.out')\n",
     "paracetamol.get_mode()\n",
-    "print('Paracetamol EDFT:', paracetamol.edft)\n",
+    "print('Paracetamol EDFT:', paracetamol.edft[0])\n",
     "print('Paracetamol qpoint:', paracetamol.nqpoint, paracetamol.qpoint)\n",
     "print('Paracetamol modes:', len(paracetamol.nmode), paracetamol.nmode)"
    ]
@@ -89,7 +89,7 @@
     "graphene = Crystal_output()\n",
     "graphene.read_cry_output('data/nostr_modes.out')\n",
     "graphene.get_mode()\n",
-    "print('Graphene EDFT:', graphene.edft)\n",
+    "print('Graphene EDFT:', graphene.edft[0])\n",
     "print('Graphene qpoints:', graphene.nqpoint)\n",
     "print('Graphene modes:', len(graphene.nmode), graphene.nmode)"
    ]
@@ -282,31 +282,42 @@
     "\n",
     "### Methods\n",
     "**check_freq_file()**  \n",
+    "  \n",
     "Check whether an output file is specified and whether it is a frequency calculation file. Not a standalone method. The identifier used: \n",
     "```\n",
     "+++ SYMMETRY ADAPTION OF VIBRATIONAL MODES +++\n",
     "```\n",
     "\n",
     "**get_qpoint()**  \n",
+    "  \n",
     "Get DFT total energy of the system and the list of q points where the vibrational frequency is calculated. Dispersion output (multiple q points) is supported. \n",
     "\n",
     "To avoid ambigious definition, the search for DFT total energy is integrated into this method. To consider possible empirical corrections, the total energy reported at the central point when taking the numerical secondary derivatives is used, instead of the converged value at the final step of SCF. Unit: KJ/mol cell\n",
     "\n",
     "**get_mode()**  \n",
+    "  \n",
     "Get frequencies of all modes at all the q points sampled. Unit: THz.\n",
     "\n",
     "**get_eigenvector()**  \n",
+    "  \n",
     "Get the eigenvectors of all normal modes. Eigenvectors are normalised to classical amplitudes. Unit: Angstrom\n",
     "\n",
     "**clean_imaginary()**  \n",
+    "  \n",
     "Substitute the negative frequencies with numpy NaN values and keep the original shape of numpy arrays. Not a standalone method. Used after get_mode(). The threshold of a negative frequency is -0.0001 THz.\n",
     "\n",
     "### Attributes\n",
     "\n",
-    "* **self.edft**, get_qpoint, float, DFT total energy of simulation cell. Unit: KJ / mol cell.\n",
+    "* **self.edft**, get_qpoint, ncalc * 1 array, DFT total energy of simulation cell. Unit: KJ / mol cell. \n",
+    "\n",
+    "Note: For harmonic calculations at $\\Gamma$ and dispersion calculations, the length of `self.edft` is 1 * 1 since only 1 central calculation is performed. For QHA calculations, its length is nSampling point * 1 list.\n",
+    "\n",
     "* **self.nqpoint**, get_qpoint, int, number of q point where the frequencies are calculated.  \n",
+    "  \n",
     "* **self.qpoint**, get_qpoint, nqpoint * 3 numpy array, the fractional coordinates of q points in reciprocal lattice.  \n",
+    "  \n",
     "* **self.nmode**, get_mode, nqpoint * 1 numpy array, the numbers of modes at each q point.  \n",
+    "  \n",
     "* **self.frequency**, get_mode and clean_imaginary, nqpoint * nmode numpy array, the vibrational frequencies ($\\nu$) of each mode at each q point. Unit: THz.\n",
     "\n",
     "Note: \n",
@@ -316,7 +327,7 @@
     "\n",
     "* **self.eigenvector**, get_eigenvector, nqpoint * nmode * natom * 3 numpy array, the eigenvectors of dynamic matrix at each atom, each vibrational mode and each qpoint. Classical amplitude (298.15K), expressed in Cartesian coordinates. Unit: Angstrom.\n",
     "\n",
-    "The source code (file_readwrite.py Line 737~957) is attached below:"
+    "The source code (file_readwrite.py Line 741~1011) is attached below:"
    ]
   },
   {
@@ -371,10 +382,17 @@
     "        Get the lattice information, DFT total energy and qpoints at which the\n",
     "        phonon frequency is calculated.\n",
     "\n",
+    "        Note: edft is a list to make the script compatible with QHA output. The\n",
+    "              sampled HA calculations in QHA output are recognized as HA\n",
+    "              calculations at various qpoints. \n",
+    "\n",
+    "              For other cases, self.edft is an array of the same numbers,\n",
+    "              corresponding to the number of qpoints.\n",
+    "\n",
     "        Input:\n",
     "            -\n",
     "        Output:\n",
-    "            self.edft, float, DFT total energy. Unit: KJ / mol cell\n",
+    "            self.edft, nqpoint * 1 array, DFT total energy. Unit: KJ / mol cell\n",
     "            self.nqpoint, int, Number of q points where the frequencies are\n",
     "                          calculated.\n",
     "            self.qpoint, nq * 3 numpy float array, Fractional coordinates of\n",
@@ -387,26 +405,39 @@
     "        if not is_freq:\n",
     "            return \"ERROR: Not a frequency output.\"\n",
     "\n",
+    "        edft = np.array([], dtype=float)\n",
     "        self.nqpoint = 0\n",
-    "        self.edft = 0\n",
     "        self.qpoint = np.array([], dtype=float)\n",
     "\n",
     "        for i, line in enumerate(self.data):\n",
+    "# Keywords in gradient calculation\n",
     "            if re.match(r'\\s*CENTRAL POINT', line):\n",
-    "                self.edft = float(line.strip().split()[2]) * 2625.500256\n",
+    "                edft = np.append(edft, float(line.strip().split()[2]) * 2625.500256)\n",
     "\n",
     "            if re.search(r'EXPRESSED IN UNITS\\s*OF DENOMINATOR', line):\n",
     "                shrink = int(line.strip().split()[-1])\n",
     "\n",
+    "# Keywords in dipersion calculation\n",
     "            if re.match(r'\\s*DISPERSION K POINT NUMBER', line):\n",
     "                coord = np.array(line.strip().split()[7:10], dtype=float)\n",
     "                self.qpoint = np.append(self.qpoint, coord / shrink)\n",
     "                self.nqpoint += 1\n",
     "\n",
-    "        self.qpoint = np.reshape(self.qpoint, (-1, 3))\n",
-    "        if self.nqpoint == 0:\n",
+    "# HA Gamma point calculation\n",
+    "        if self.nqpoint == 0 and len(edft) == 1:\n",
     "            self.nqpoint = 1\n",
-    "            self.qpoint = np.array([0, 0, 0], dtype=float)\n",
+    "            self.qpoint = np.array([[0, 0, 0]], dtype=float)\n",
+    "            self.edft = edft\n",
+    "# QHA Gamma point calculation\n",
+    "        elif self.nqpoint == 0 and len(edft) > 1:\n",
+    "            self.nqpoint = len(edft)\n",
+    "            self.qpoint = np.array([[0, 0, 0] for i in range(self.nqpoint)], dtype=float)\n",
+    "# HA dispersion calculation\n",
+    "        elif self.nqpoint > 0 and len(edft) == 1:\n",
+    "            self.qpoint = np.reshape(self.qpoint, (-1, 3))\n",
+    "            self.edft = edft\n",
+    "        else:\n",
+    "            return \"ERROR: Only support: 1. HA, Gamma point 2. QHA, gamma point 3. HA dispersion.\"\n",
     "\n",
     "        return self.edft, self.nqpoint, self.qpoint\n",
     "\n",
@@ -596,7 +627,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
