file_readwrite update error report scheme

--- a/tutorial/thermodynamics/file_readwrite.ipynb
+++ b/tutorial/thermodynamics/file_readwrite.ipynb
@@ -327,7 +327,7 @@
     "\n",
     "* **self.eigenvector**, get_eigenvector, nqpoint * nmode * natom * 3 numpy array, the eigenvectors of dynamic matrix at each atom, each vibrational mode and each qpoint. Classical amplitude (298.15K), expressed in Cartesian coordinates. Unit: Angstrom.\n",
     "\n",
-    "The source code (file_readwrite.py Line 741~1011) is attached below:"
+    "The source code (file_readwrite.py Line 741~1016) is attached below:"
    ]
   },
   {
@@ -362,9 +362,11 @@
     "            is_freq: bool, True if the identifier is found.\n",
     "        \"\"\"\n",
     "        import re\n",
+    "        import sys\n",
     "\n",
     "        if not hasattr(self, 'data'):\n",
-    "            return \"ERROR: Output file not specified.\"\n",
+    "            print('ERROR: Output file not specified.')\n",
+    "            sys.exit(1)\n",
     "\n",
     "        is_freq = False\n",
     "\n",
@@ -400,10 +402,12 @@
     "        \"\"\"\n",
     "        import re\n",
     "        import numpy as np\n",
+    "        import sys\n",
     "\n",
     "        is_freq = self.check_freq_file()\n",
     "        if not is_freq:\n",
-    "            return \"ERROR: Not a frequency output.\"\n",
+    "            print('ERROR: Not a frequency output.')\n",
+    "            sys.exit(1)\n",
     "\n",
     "        edft = np.array([], dtype=float)\n",
     "        self.nqpoint = 0\n",
@@ -437,7 +441,8 @@
     "            self.qpoint = np.reshape(self.qpoint, (-1, 3))\n",
     "            self.edft = edft\n",
     "        else:\n",
-    "            return \"ERROR: Only support: 1. HA, Gamma point 2. QHA, gamma point 3. HA dispersion.\"\n",
+    "            print('ERROR: Only support: 1. HA, Gamma point 2. QHA, gamma point 3. HA dispersion.')\n",
+    "            sys.exit(1)\n",
     "\n",
     "        return self.edft, self.nqpoint, self.qpoint\n",
     "\n",
