--- a/tutorial/Tutorial.ipynb
+++ b/tutorial/Tutorial.ipynb
@@ -121,7 +121,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<file_readwrite.Crystal_input object at 0x1067d4430>\n"
+      "<file_readwrite.Crystal_input object at 0x104459a30>\n"
      ]
     }
    ],
@@ -169,7 +169,18 @@
    "execution_count": 6,
    "id": "126fc494",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<file_readwrite.Crystal_input at 0x104459a30>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mgo_input.from_blocks(geom_block=geom_block, bs_block=bs_block, \n",
     "                                        func_block=func_block, scf_block=scf_block, title=title)"
@@ -558,6 +569,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "MgO crystal_functions tutorial\r\n",
       "CRYSTAL\r\n",
       "0 0 0\r\n",
       "225\r\n",
@@ -653,7 +665,18 @@
    "execution_count": 18,
    "id": "c6b35ab7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<file_readwrite.Crystal_output at 0x1214c0af0>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mgo_output = Crystal_output()\n",
     "mgo_output.read_cry_output('data/mgo_optgeom.out')"
@@ -985,13 +1008,7 @@
     {
      "data": {
       "text/plain": [
-       "['BAND\\n',\n",
-       " 'BAND STRUCTURE CALCULATION\\n',\n",
-       " '3 4 200 1 26 1 0\\n',\n",
-       " '0 0 0  2 0 0\\n',\n",
-       " '2 0 0  2 2 2\\n',\n",
-       " '2 2 2  1 0 2\\n',\n",
-       " 'END\\n']"
+       "<file_readwrite.Properties_input at 0x1265d6790>"
       ]
      },
      "execution_count": 31,
@@ -1020,18 +1037,7 @@
    "execution_count": 32,
    "id": "aeb551e7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['NEWK\\n', '12 24\\n', '1 0\\n']"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mgo_bands_input.make_newk_block(12,24)"
    ]
@@ -1176,7 +1182,18 @@
    "execution_count": 38,
    "id": "6d8b133b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<file_readwrite.Properties_output at 0x1303fbd30>"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mgo_bands_output = Properties_output()\n",
     "mgo_bands_output.read_cry_bands('data/mgo_BAND_dat.BAND')"
@@ -1187,7 +1204,18 @@
    "execution_count": 39,
    "id": "5b293357",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<file_readwrite.Properties_output at 0x130404220>"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mgo_doss_output = Properties_output()\n",
     "mgo_doss_output.read_cry_doss('data/mgo_DOSS_dat.DOSS')"
@@ -1296,7 +1324,18 @@
    "execution_count": 43,
    "id": "beedc92d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<file_readwrite.Crystal_gui at 0x1303d78e0>"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mgo_gui = Crystal_gui()\n",
     "mgo_gui.read_cry_gui('data/mgo_optgeom.gui')"
@@ -1758,7 +1797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 51,
    "id": "e8e8a1be",
    "metadata": {},
    "outputs": [],
@@ -1769,219 +1808,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 52,
    "id": "21471a32",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3   1   1\r\n",
-      "0.0 1.8 1.8\r\n",
-      "1.8 0.0 1.8\r\n",
-      "1.8 1.8 0.0\r\n",
-      "48\r\n",
-      "1.0 0.0 -0.0\r\n",
-      "0.0 1.0 -0.0\r\n",
-      "0.0 -0.0 1.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "-1.0 -0.0 0.0\r\n",
-      "-0.0 -1.0 0.0\r\n",
-      "-0.0 0.0 -1.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "0.0 -1.0 -0.0\r\n",
-      "1.0 -0.0 -0.0\r\n",
-      "-0.0 -0.0 1.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "-0.0 1.0 0.0\r\n",
-      "-1.0 0.0 0.0\r\n",
-      "0.0 0.0 -1.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "-1.0 -0.0 -0.0\r\n",
-      "-0.0 -1.0 -0.0\r\n",
-      "-0.0 0.0 1.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "1.0 0.0 0.0\r\n",
-      "0.0 1.0 0.0\r\n",
-      "0.0 -0.0 -1.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "-0.0 1.0 -0.0\r\n",
-      "-1.0 0.0 -0.0\r\n",
-      "0.0 0.0 1.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "0.0 -1.0 0.0\r\n",
-      "1.0 -0.0 0.0\r\n",
-      "-0.0 -0.0 -1.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "1.0 -0.0 0.0\r\n",
-      "0.0 -1.0 0.0\r\n",
-      "0.0 0.0 -1.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "-1.0 0.0 -0.0\r\n",
-      "-0.0 1.0 -0.0\r\n",
-      "-0.0 -0.0 1.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "-0.0 -1.0 0.0\r\n",
-      "-1.0 -0.0 0.0\r\n",
-      "0.0 -0.0 -1.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "0.0 1.0 -0.0\r\n",
-      "1.0 0.0 -0.0\r\n",
-      "-0.0 0.0 1.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "-1.0 0.0 0.0\r\n",
-      "-0.0 1.0 0.0\r\n",
-      "-0.0 -0.0 -1.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "1.0 -0.0 -0.0\r\n",
-      "0.0 -1.0 -0.0\r\n",
-      "0.0 0.0 1.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "0.0 1.0 0.0\r\n",
-      "1.0 0.0 0.0\r\n",
-      "-0.0 0.0 -1.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "-0.0 -1.0 -0.0\r\n",
-      "-1.0 -0.0 -0.0\r\n",
-      "0.0 -0.0 1.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "0.0 -0.0 1.0\r\n",
-      "1.0 -0.0 0.0\r\n",
-      "-0.0 1.0 0.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "-0.0 0.0 -1.0\r\n",
-      "-1.0 0.0 -0.0\r\n",
-      "0.0 -1.0 -0.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "-0.0 -0.0 1.0\r\n",
-      "-0.0 -1.0 0.0\r\n",
-      "1.0 0.0 0.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "0.0 0.0 -1.0\r\n",
-      "0.0 1.0 -0.0\r\n",
-      "-1.0 -0.0 -0.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "-0.0 0.0 1.0\r\n",
-      "-1.0 0.0 0.0\r\n",
-      "0.0 -1.0 0.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "0.0 -0.0 -1.0\r\n",
-      "1.0 -0.0 -0.0\r\n",
-      "-0.0 1.0 -0.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "0.0 0.0 1.0\r\n",
-      "0.0 1.0 0.0\r\n",
-      "-1.0 -0.0 0.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "-0.0 -0.0 -1.0\r\n",
-      "-0.0 -1.0 -0.0\r\n",
-      "1.0 0.0 -0.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "0.0 0.0 -1.0\r\n",
-      "1.0 0.0 -0.0\r\n",
-      "-0.0 -1.0 -0.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "-0.0 -0.0 1.0\r\n",
-      "-1.0 -0.0 0.0\r\n",
-      "0.0 1.0 0.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "0.0 -0.0 -1.0\r\n",
-      "0.0 -1.0 -0.0\r\n",
-      "-1.0 0.0 -0.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "-0.0 0.0 1.0\r\n",
-      "-0.0 1.0 0.0\r\n",
-      "1.0 -0.0 0.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "-0.0 -0.0 -1.0\r\n",
-      "-1.0 -0.0 -0.0\r\n",
-      "0.0 1.0 -0.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "0.0 0.0 1.0\r\n",
-      "1.0 0.0 0.0\r\n",
-      "-0.0 -1.0 0.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "-0.0 0.0 -1.0\r\n",
-      "-0.0 1.0 -0.0\r\n",
-      "1.0 -0.0 -0.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "0.0 -0.0 1.0\r\n",
-      "0.0 -1.0 0.0\r\n",
-      "-1.0 0.0 0.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "-0.0 1.0 0.0\r\n",
-      "-0.0 0.0 1.0\r\n",
-      "1.0 0.0 -0.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "0.0 -1.0 -0.0\r\n",
-      "0.0 -0.0 -1.0\r\n",
-      "-1.0 -0.0 0.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "1.0 0.0 0.0\r\n",
-      "0.0 0.0 1.0\r\n",
-      "0.0 -1.0 -0.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "-1.0 -0.0 -0.0\r\n",
-      "-0.0 -0.0 -1.0\r\n",
-      "-0.0 1.0 0.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "0.0 -1.0 0.0\r\n",
-      "0.0 -0.0 1.0\r\n",
-      "-1.0 -0.0 -0.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "-0.0 1.0 -0.0\r\n",
-      "-0.0 0.0 -1.0\r\n",
-      "1.0 0.0 0.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "-1.0 -0.0 0.0\r\n",
-      "-0.0 -0.0 1.0\r\n",
-      "-0.0 1.0 -0.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "1.0 0.0 -0.0\r\n",
-      "0.0 0.0 -1.0\r\n",
-      "0.0 -1.0 0.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "-0.0 -1.0 -0.0\r\n",
-      "-0.0 -0.0 -1.0\r\n",
-      "1.0 -0.0 0.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "0.0 1.0 0.0\r\n",
-      "0.0 0.0 1.0\r\n",
-      "-1.0 0.0 -0.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "-1.0 0.0 -0.0\r\n",
-      "-0.0 0.0 -1.0\r\n",
-      "-0.0 -1.0 0.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "1.0 -0.0 0.0\r\n",
-      "0.0 -0.0 1.0\r\n",
-      "0.0 1.0 -0.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "0.0 1.0 -0.0\r\n",
-      "0.0 0.0 -1.0\r\n",
-      "-1.0 0.0 0.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "-0.0 -1.0 0.0\r\n",
-      "-0.0 -0.0 1.0\r\n",
-      "1.0 -0.0 -0.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "1.0 -0.0 -0.0\r\n",
-      "0.0 -0.0 -1.0\r\n",
-      "0.0 1.0 0.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "-1.0 0.0 0.0\r\n",
-      "-0.0 0.0 1.0\r\n",
-      "-0.0 -1.0 -0.0\r\n",
-      "0.0 0.0 0.0\r\n",
-      "1\r\n",
-      "29 0.0 0.0 0.0\r\n",
-      "225 48"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#! cat data/copper_from_ase.gui"
    ]
@@ -2004,7 +1834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "id": "161aef47",
    "metadata": {},
    "outputs": [
@@ -2014,7 +1844,7 @@
        "Atoms(symbols='MgO', pbc=True, cell=[[0.0, 2.12011000819, 2.12011000819], [2.12011000819, 0.0, 2.12011000819], [2.12011000819, 2.12011000819, 0.0]])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2044,7 +1874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "id": "4717aa5b",
    "metadata": {},
    "outputs": [],
@@ -2062,7 +1892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "id": "8d70a5ef",
    "metadata": {},
    "outputs": [],
@@ -2083,7 +1913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 56,
    "id": "b2d6ac3c",
    "metadata": {},
    "outputs": [
