New version of QHA

--- a/tutorial/thermodynamics/thermodynamics-HA.ipynb
+++ b/tutorial/thermodynamics/thermodynamics-HA.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "source": [
     "## Tests\n",
-    "2 test are performed. One is based on $\\Gamma$ point calculations and the other one is based on phonon dispersion calculations.\n",
+    "2 tests are performed. One is based on $\\Gamma$ point calculations and the other one is based on phonon dispersion calculations.\n",
     "\n",
     "1. Thermodynamic properties at room temperature (298.15K), 0 pressure - For comparison with CRYSTAL17 output.  \n",
     "2. Thermodynamic properties from 0K to 300K, with the interval of 20K and from 0 GPa to 0.5 GPa with the interval of - To illustrate the structure of output file and key information. \n",
@@ -1293,7 +1293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
